--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "enqueue-app",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.5"
   }
 }
